--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,11 +61,13 @@ jobs:
       run: |
         python fips build
 
-    - name: Upload binary artifact
+    - name: Upload server to extension
       uses: actions/upload-artifact@v4
       with:
         name: gpulang_server-${{matrix.binary_name}}
         path: vscode-extension/bin/
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Upload to release
       uses: softprops/action-gh-release@v2
@@ -73,7 +75,6 @@ jobs:
         files: |
           ../fips-deploy/GPULang/${{matrix.config}}/gpulangc-${{matrix.binary_name}}
           ../fips-deploy/GPULang/${{matrix.config}}/gpulang_server-${{matrix.binary_name}}
-          
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
