Use pattern to download all gpulang_server binaries,

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,20 +61,19 @@ jobs:
       run: |
         python fips build
 
-    - name: Upload server to extension
+    - name: Upload server artifact
       uses: actions/upload-artifact@v4
       with:
         name: gpulang_server-${{matrix.binary_name}}
-        path: vscode-extension/bin/
+        path: ../fips-deploy/GPULang/${{matrix.config}}/gpulang_server-${{matrix.binary_name}}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Upload to release
+    - name: Upload gpulangc to GitHub release
       uses: softprops/action-gh-release@v2
       with:
         files: |
           ../fips-deploy/GPULang/${{matrix.config}}/gpulangc-${{matrix.binary_name}}
-          ../fips-deploy/GPULang/${{matrix.config}}/gpulang_server-${{matrix.binary_name}}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -84,6 +83,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Download server artifacts to vscode binary folder
+        uses: actions/download-artifact@v4
+        with:
+          pattern: gpulang_server-*
+          merge-multiple: true
+          path: vscode-extension/bin/
+          
       - name: Install dependencies
         run: cd vscode-extension && npm install
       - name: Publish to VS Code Marketplace
