--- a/gpulangcompiler/CMakeLists.txt
+++ b/gpulangcompiler/CMakeLists.txt
@@ -31,3 +31,13 @@ if (APPLE)
         COMMENT "Signing the binary with codesign"
     )
 endif()
+
+if (DEPLOY)
+    add_custom_command(TARGET gpulangc POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_SOURCE_DIR}/bin
+        COMMAND ${CMAKE_COMMAND} -E copy
+            $<TARGET_FILE:gpulangc>
+            ${CMAKE_SOURCE_DIR}/bin/
+        COMMENT "Copying the GPULang compiler binary to deploy folder"
+    )
+endif()
