--- a/gpulangserver/CMakeLists.txt
+++ b/gpulangserver/CMakeLists.txt
@@ -42,4 +42,12 @@ if (NOT DEPLOY)
             "${EXTENSION_BIN_DIR}/$<TARGET_FILE_NAME:gpulang_server>"
         COMMENT "Copying language server binary to vscode extension folder"
     )
+else()
+    add_custom_command(TARGET gpulang_server POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_SOURCE_DIR}/bin
+        COMMAND ${CMAKE_COMMAND} -E copy
+            $<TARGET_FILE:gpulang_server>
+            ${CMAKE_SOURCE_DIR}/bin/
+        COMMENT "Copying the GPULang server binary to deploy folder"
+    )
 endif()
