Fix name of vscode extension

--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "gpulang-vscode-client",
+	"name": "GPULang",
 	"description": "GPULang Language Server Client",
 	"publisher": "gustavsterbrant",
 	"license": "MIT",
