--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -7,7 +7,7 @@
 	"icon": "temp-icon.png",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/Microsoft/vscode-extension-samples"
+		"url": "https://github.com/gscept/GPULang"
 	},
 	"categories": [
 		"Programming Languages"
