Add package job for the runtime libraries.

--- a/code/api/CMakeLists.txt
+++ b/code/api/CMakeLists.txt
@@ -31,4 +31,19 @@ fips_dir(reflection/vk)
         pipelineassembly.h
     )
 
+    set_target_properties(gpulang_reflection PROPERTIES
+        OUTPUT_NAME "gpulang_reflection${PLATFORM}"
+    )
+
+if(DEPLOY)
+    install(TARGETS gpulang_reflection
+        ARCHIVE DESTINATION ${CMAKE_SOURCE_DIR}/runtime/lib/
+        LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/runtime/lib/
+    )
+
+    install(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/"
+        DESTINATION ${CMAKE_SOURCE_DIR}/runtime/include
+        FILES_MATCHING PATTERN "*.h"
+    )
+endif()
 fips_end_lib()
