--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,12 +60,21 @@ jobs:
     - name: Build
       run: |
         python fips build
+        cmake --install ../fips-build/GPULang/${{matrix.config}}
 
     - name: Upload server artifact
       uses: actions/upload-artifact@v4
       with:
         name: gpulang_server-${{matrix.binary_name}}
         path: bin/gpulang_server-${{matrix.binary_name}}
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        
+    - name: Upload runtime library
+      uses: actions/upload-artifact@v4
+      with:
+        name: gpulang_runtime-${{matrix.binary_name}}
+        path: runtime
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -76,6 +85,29 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+  package-runtime:
+    runs-on: ubuntu-latest
+    needs: [build]
+    steps:
+        - uses: actions/checkout@v4
+        - name: Download server artifacts to runtime binary folder
+            uses: actions/download-artifact@v4
+            with:
+                pattern: gpulang_runtime-*
+                merge-multiple: true
+                path: runtime/
+                
+        - name: Package runtime
+          run: |
+            tar czfv ./runtime.tar runtime
+            
+        - name: Upload runtime to GitHub release
+          uses: softprops/action-gh-release@v2
+          with:
+            files: runtime.tar
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        
   package-extension:
     runs-on: ubuntu-latest
     needs: [build]
