Fix some build things.
Extension also only activates on gpulang files, and prints the config in visual studio code

--- a/code/api/CMakeLists.txt
+++ b/code/api/CMakeLists.txt
@@ -34,6 +34,7 @@ fips_dir(reflection/vk)
     set_target_properties(gpulang_reflection PROPERTIES
         OUTPUT_NAME "gpulang_reflection${PLATFORM}"
     )
+    target_compile_features(gpulang_reflection PUBLIC cxx_std_20)
 
 if(DEPLOY)
     install(TARGETS gpulang_reflection
