--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
       uses: humbletim/setup-vulkan-sdk@v1.2.1
       with:
         vulkan-query-version: 1.4.304.1
-        vulkan-components: SPIRV-Tools, Vulkan-Headers
+        vulkan-components: SPIRV-Tools, Vulkan-Headers, Vulkan-Loader
         vulkan-use-cache: true
 
     - name: Set up Python 3.x
