--- a/gpulangcompiler/CMakeLists.txt
+++ b/gpulangcompiler/CMakeLists.txt
@@ -5,7 +5,7 @@
 fips_begin_app(gpulangc cmdline)
     target_compile_options(gpulangc PRIVATE $<$<CXX_COMPILER_ID:MSVC>:/W3>)
     target_include_directories(gpulangc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
-		    fips_deps(gpulang_compiler Vulkan::SPIRV-Tools SPIRV-Tools-opt)
+		    fips_deps(gpulang_compiler SPIRV-Tools-opt Vulkan::SPIRV-Tools)
     if(FIPS_LINUX OR FIPS_APPLE)
         fips_deps(stdc++fs)
     endif()
