Update azure publisher

--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "GPULang",
 	"description": "GPULang Language Server",
-	"publisher": "gustavsterbrant",
+	"publisher": "GustavSterbrantAzureDevops",
 	"license": "MIT",
 	"version": "1.0.0",
 	"icon": "temp-icon.png",
